// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /api/moderation ignores invalid field, and returns only flaggedLinks 1`] = `
{
  "flaggedLinks": [
    "https://facebook.com",
    "https://gogle.com",
  ],
}
`;

exports[`GET /api/moderation returns multiple list: flaggedLinks,flaggedIps 1`] = `
{
  "flaggedIps": [
    "12ca17b49af2289436f303e0166030a21e525d266e209267433801a8fd4071a0",
    "19e36255972107d42b8cecb77ef5622e842e8a50778a6ed8dd1ce94732daca9e",
  ],
  "flaggedLinks": [
    "https://facebook.com",
    "https://gogle.com",
  ],
}
`;

exports[`GET /api/moderation when list params is empty returns all the list 1`] = `
{
  "flaggedAddresses": [
    "0x0001",
    "0x0002",
  ],
  "flaggedIps": [
    "12ca17b49af2289436f303e0166030a21e525d266e209267433801a8fd4071a0",
    "19e36255972107d42b8cecb77ef5622e842e8a50778a6ed8dd1ce94732daca9e",
  ],
  "flaggedLinks": [
    "https://facebook.com",
    "https://gogle.com",
  ],
  "verifiedTokens": {
    "test": {
      "value": "a",
    },
  },
}
`;

exports[`GET /api/moderation when list params is set returns only the selected flaggedLinks list 1`] = `
{
  "flaggedLinks": [
    "https://facebook.com",
    "https://gogle.com",
  ],
}
`;

exports[`GET /api/moderation when list params is set returns only the selected verifiedTokens list 1`] = `
{
  "verifiedTokens": {
    "test": {
      "value": "a",
    },
  },
}
`;
